Fix square clickbox and grid visibility
In the previous solution clicking the grid between squares wouldn't
trigger an event and there was no way to get rid of the grid because
it was made by using margins which cannot be individually recolored.

--- a/styles.css
+++ b/styles.css
@@ -20,15 +20,15 @@ body {
     gap: 0;
     border-style: solid;
     flex: 0 0 auto;
-    background-color:black;
+    background-color:#36454f;
 }
 
 .square {
     width: 32px;
     height: 32px;
-    border-style: none;
+    border-style: solid;
     padding: 0 0 0 0;
-    margin: 1px 1px 1px 1px;
+    margin: -1px -1px -1px -1px;
     border-width: 1px;
     user-select: none;
     background-color: #36454f;
